# SceneFoundry

./: .gitmodules
SceneFoundry/: CMakeLists.txt  SceneFoundry_SceneFoundry.vcxproj  SceneFoundry_SceneFoundry.vcxproj.filters  _.cpp  _.h  _dependencies.txt  _references.txt  aaa_global_ubo.cpp  aaa_global_ubo.h  aaa_point_light_system.cpp  aaa_point_light_system.h  aaa_simple_render_system.cpp  aaa_simple_render_system.h  application.cpp  application.h  camera.cpp  camera.h  document.cpp  document.h  global_ubo.cpp  global_ubo.h  immersion.cpp  immersion.h  impact.cpp  impact.h  input.cpp  input.h  main_frame.cpp  main_frame.h  main_scene.cpp  main_scene.h  matter.txt  pane_impact.cpp  pane_impact.h
SceneFoundry/__implement/: CMakeLists.txt  main.cpp  shared_SceneFoundry_SceneFoundry.vcxproj
aaa_sandbox/: CMakeLists.txt  _.cpp  _.h  _types.cpp  _types.h  aaa_transform_component.h  frame.h  game_layer.h  game_object.h  render_system.h  renderer.h  scene.h
aaa_sandbox_engine/: _.h  glfw_input.cpp  glfw_input.h  render_scene_data.h
aaa_sandbox_renderer/: CMakeLists.txt  _.h  aaa_buffer.h  aaa_descriptor.cpp  aaa_descriptor.h  aaa_gltf.cpp  aaa_gltf.h  aaa_instance.cpp  aaa_pipeline.cpp  aaa_pipeline.h  aaa_texture.cpp  aaa_texture.h  aaa_window.cpp  aaa_window.h  global_ubo.h  object_model.h  renderer.cpp
opengl-pbr-renderer/: CMakeLists.txt  SceneFoundry_opengl-pbr-renderer.vcxproj  SceneFoundry_opengl-pbr-renderer.vcxproj.filters  _.cpp  _.h  application.cpp  application.h  camera.cpp  camera.h  document.cpp  document.h  framework.h  global_ubo.cpp  global_ubo.h  immersion.cpp  immersion.h  impact.cpp  impact.h  input.cpp  input.h  main_frame.cpp  main_frame.h  main_scene.cpp  main_scene.h  matter.txt  pane_impact.cpp  pane_impact.h
opengl-pbr-renderer/engine/: CMakeLists.txt  aaa_bloomframebuffer.cpp  aaa_constants.h  aaa_cube.cpp  aaa_engine.h  aaa_entity.cpp  aaa_entity.h  aaa_framebuffer.cpp  aaa_framebuffer.h  aaa_fullscreenquad.h  aaa_hdrtexture.cpp  aaa_mesh.cpp  aaa_mesh.h  aaa_model.cpp  aaa_model.h  aaa_rendermanager.cpp  aaa_rendermanager.h  aaa_scene.h  aaa_shader.h  aaa_vertex.h  aaa_windowmanager.cpp  camera.cpp  camera.h  cameramanager.cpp  cameramanager.h  inputmanager.cpp  inputmanager.h  rotatingcamera.cpp  rotatingcamera.h  timer.cpp  timer.h
pbr-renderer/: CMakeLists.txt  SceneFoundry_pbr-renderer.vcxproj  SceneFoundry_pbr-renderer.vcxproj.filters  _.cpp  _.h  aaa_global_ubo.cpp  aaa_global_ubo.h  application.cpp  application.h  camera.cpp  camera.h  document.cpp  document.h  global_ubo.cpp  global_ubo.h  immersion.cpp  immersion.h  impact.cpp  impact.h  input.cpp  input.h  main_frame.cpp  main_frame.h  main_scene.cpp  main_scene.h  matter.txt  pane_impact.cpp  pane_impact.h  resource.h
pbr-renderer/__implement/: CMakeLists.txt  main.cpp  shared_SceneFoundry_pbr-renderer.vcxproj
sandbox/: CMakeLists.txt  SceneFoundry_sandbox_interfaces.vcxproj  SceneFoundry_sandbox_interfaces.vcxproj.filters  _.h  _constant.h  frame.h  (+16 more)
sandbox_engine/: CMakeLists.txt  SceneFoundry_sandbox_engine.vcxproj  SceneFoundry_sandbox_engine.vcxproj.filters  _.h  asset_manager.cpp  asset_manager.h  engine.cpp  engine.h  glfw_input.h
sandbox_engine/include/: asset_manager.h  engine.h  render_scene_data.h
sandbox_engine/include/common/: glfw_input.h
sandbox_engine/src/: asset_manager.cpp  engine.cpp
sandbox_engine/src/common/: glfw_input.cpp
sandbox_interfaces/: CMakeLists.txt  _.h  _sandbox_interfaces.h  asset_provider.h  camera.h  entity.h  frame.h  frame_i.h  frame_info.h  game_layer.h  game_object.h  model.h  point_light_component.h  provider.h  render_system.h  renderer.h  scene.h  transform_component.h  window_input.h
sandbox_interfaces/include/: class_set.h  frame_info.h
sandbox_interfaces/include/interfaces/: camera_i.h  entity_i.h  game_layer_i.h  game_object_i.h  model_i.h  provider_i.h  render_system_i.h  renderer_i.h  scene_i.h  window_input_i.h
sandbox_renderer/: CMakeLists.txt  SceneFoundry_sandbox_renderer.vcxproj  SceneFoundry_sandbox_renderer.vcxproj.filters  _.h  aaa_buffer.cpp  aaa_buffer.h  aaa_descriptor.cpp  aaa_descriptor.h  aaa_gltf.cpp  aaa_gltf.h  aaa_instance.h  aaa_swapchain.cpp  aaa_swapchain.h  aaa_window.h  device.cpp  device.h  global_ubo.h  image.cpp  image.h  object.cpp  object.h  object_model.h  pipeline.cpp  pipeline.h  renderer.cpp  renderer.h  texture.cpp  texture.h
sandbox_renderer/aaa_include/: _.h
sandbox_renderer/aaa_vk_tools/: vk_descriptor_registry.cpp  vk_tools.cpp
sandbox_renderer/include/: window.h
sandbox_renderer/include/common/: exception.h
sandbox_renderer/include/vk_tools/: vk_descriptor_registry.h  vk_descriptor_requirement.h  vk_init.h  vk_tools.h
sandbox_renderer/include/vulkan_wrapper/: vulkan_buffer.h  vulkan_descriptor.h  vulkan_device.h  vulkan_gltf.h  vulkan_image.h  vulkan_instance.h  vulkan_obj.h  vulkan_pipeline.h  vulkan_renderer.h  vulkan_swapchain.h  vulkan_texture.h
sandbox_renderer/include/vulkan_wrapper/render_passes/: gbuffer_pass.h
sandbox_renderer/include/vulkan_wrapper/render_systems/: gltf_render_system.h  obj_render_system.h  object_render_system.h  point_light_render_system.h  point_light_rs.h  skybox_ibl_render_system.h  skybox_ibl_rs.h
sandbox_renderer/render_passes/: gbuffer_pass.cpp  gbuffer_pass.h
sandbox_renderer/render_systems/: gltf_render_system.cpp  gltf_render_system.h  object_render_system.cpp  object_render_system.h  point_light_render_system.cpp  point_light_render_system.h  skybox_ibl_render_system.cpp  skybox_ibl_render_system.h
sandbox_renderer/src/: window.cpp
sandbox_renderer/src/vk_tools/: vk_descriptor_registry.cpp  vk_tools.cpp
sandbox_renderer/src/vulkan_wrapper/: vulkan_buffer.cpp  vulkan_descriptor.cpp  vulkan_device.cpp  vulkan_gltf.cpp  vulkan_image.cpp  vulkan_instance.cpp  vulkan_obj.cpp  vulkan_pipeline.cpp  vulkan_renderer.cpp  vulkan_swapchain.cpp  vulkan_texture.cpp
sandbox_renderer/src/vulkan_wrapper/render_systems/: gltf_render_system.cpp  object_render_system.cpp  point_light_render_system.cpp  skybox_ibl_render_system.cpp
(+84 files in other folders)
